--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -5,6 +5,7 @@ body {
   font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#777;
   font-weight:300;
+  background-color: #0f0f0f;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -48,6 +49,16 @@ a small {
 .wrapper {
   width:860px;
   margin:0 auto;
+}
+
+.wrapper p {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  font-size: 1.25em;
 }
 
 blockquote {
